--- a/Animal Armies/Animal Armies/Animal Armies.csproj
+++ b/Animal Armies/Animal Armies/Animal Armies.csproj
@@ -111,6 +111,7 @@
     <Compile Include="AI\SurroundOrder.cs" />
     <Compile Include="AI\SurroundOrder2.cs" />
     <Compile Include="CameraManager.cs" />
+    <Compile Include="GUI\PlayerSelection.cs" />
     <Compile Include="HumanPlayer.cs" />
     <Compile Include="Net\PlayerListMessage.cs" />
     <Compile Include="Net\Connection.cs" />
@@ -129,6 +130,7 @@
     <Compile Include="GameTile.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TeamDictionary.cs" />
     <Compile Include="WorldGenerator.cs" />
   </ItemGroup>
   <ItemGroup>
